# CellularAbstractionSystem

./: README.md  main.py  pyproject.toml
config/: constants.py
core/: simulation_engine.py
world/: simulation_interface.py
world/base/: brain.py
