[project]
name = "cellularabstractionsystem"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.5",
    "pygame>=2.6.1",
    "pytest>=8.3.5",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
